[MIM-40] PlanTab에 계획 추가, 계획 삭제, 하단 plan list 구현
기획을 변경 : 날짜 선택시 계획 추가 BS가 올라오던것을 -> Add 버튼을 따로 생성하고, 날짜 선택시 하단의 해당날짜 계획 list가 조회되도록 수정

- Bottom sheet를 통해 계획추가 되도록 구현 -> 추가되면 하단의 리스트에 추가되도록,
- 선택한 날짜에 해당하는 계획 list를 하단에 보여주도록 구현 : BS dismiss시 다시 List 조회되도록 구현
- 계획 삭제 기능 연결

--- a/presentation/src/main/res/layout/fragment_plan.xml
+++ b/presentation/src/main/res/layout/fragment_plan.xml
@@ -22,6 +22,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/contentsMarginVertical"
@@ -38,10 +39,9 @@
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="@color/background_light_grey"
-                    android:layout_marginHorizontal="20dp"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/calendarCardView"
@@ -123,12 +123,26 @@
                     android:id="@+id/bottomSheetViewHandle"
                     android:layout_width="50dp"
                     android:layout_height="4dp"
-                    android:background="@drawable/dot_circle"
                     android:layout_marginTop="10dp"
+                    android:background="@drawable/dot_circle"
                     android:backgroundTint="@color/background_light_grey"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/bottomSheetView" />
+
+                <ImageView
+                    android:id="@+id/addPlanBtn"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/circle"
+                    android:backgroundTint="@color/main_5"
+                    android:elevation="4dp"
+                    android:padding="7dp"
+                    android:src="@drawable/ic_add"
+                    app:layout_constraintBottom_toBottomOf="@id/calendarCardView"
+                    app:layout_constraintEnd_toEndOf="@id/calendarCardView" />
 
                 <TextView
                     android:id="@+id/planListThatDayTitle"
@@ -150,10 +164,36 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="26dp"
                     android:nestedScrollingEnabled="false"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/planListThatDayTitle" />
+
+                <ImageView
+                    android:id="@+id/noListImageView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    android:src="@drawable/ic_list"
+                    app:layout_constraintBottom_toTopOf="@id/noListTextView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/planListThatDayTitle" />
+
+                <TextView
+                    android:id="@+id/noListTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="50dp"
+                    android:text="해당 날짜에 계획이 없습니다."
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/noListImageView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
