--- a/presentation/src/main/res/layout/fragment_plan.xml
+++ b/presentation/src/main/res/layout/fragment_plan.xml
@@ -47,6 +47,7 @@
                     android:id="@+id/calendarCardView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -97,7 +98,7 @@
                         app:layout_constraintTop_toBottomOf="@id/dateTextView"
                         app:mcv_dateTextAppearance="@style/CalendarDayText"
                         app:mcv_showOtherDates="decorated_disabled"
-                        app:mcv_tileHeight="60dp" />
+                        app:mcv_tileHeight="40dp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
