--- a/presentation/src/main/res/layout/item_tag.xml
+++ b/presentation/src/main/res/layout/item_tag.xml
@@ -8,16 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="76dp">
 
-        <ImageView
-            android:id="@+id/tagColorImageView"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="16dp"
-            android:elevation="8dp"
-            android:src="@drawable/ic_tag"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <androidx.cardview.widget.CardView
             android:id="@+id/itemBackgroundView"
             android:layout_width="0dp"
@@ -38,17 +28,31 @@
 
                 <TextView
                     android:id="@+id/tagNameTextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="43dp"
+                    android:layout_marginStart="30dp"
                     android:layout_marginEnd="5dp"
                     android:textSize="16sp"
+                    android:lines="1"
+                    android:ellipsize="end"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
+                    app:layout_constraintEnd_toStartOf="@+id/tagColorImageView"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="태그 이름" />
+
+                <ImageView
+                    android:id="@+id/tagColorImageView"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="16dp"
+                    android:elevation="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_tag_label"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/deleteBtn"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/deleteBtn"
