--- a/presentation/src/main/res/layout/fragment_statistics.xml
+++ b/presentation/src/main/res/layout/fragment_statistics.xml
@@ -60,7 +60,7 @@
                     tools:text="2022.02.14 - 2022.02.21" />
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/statisticsCardView"
+                    android:id="@+id/statisticsWeekCardView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
@@ -83,7 +83,7 @@
                         android:paddingBottom="25dp">
 
                         <ImageView
-                            android:id="@+id/medalImageView"
+                            android:id="@+id/medalWeekImageView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="4dp"
@@ -119,7 +119,7 @@
                             app:layout_constraintTop_toTopOf="@id/statisticsWeekResult" />
 
                         <TextView
-                            android:id="@+id/statisticsMyDescription"
+                            android:id="@+id/statisticsWeekMyDescription"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
@@ -139,7 +139,7 @@
                             android:layout_marginEnd="10dp"
                             app:layout_constraintEnd_toStartOf="@id/successWeekInfo"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/statisticsMyDescription" />
+                            app:layout_constraintTop_toBottomOf="@id/statisticsWeekMyDescription" />
 
                         <include
                             android:id="@+id/successWeekInfo"
@@ -179,7 +179,160 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/tagStatisticsRecyclerView"
+                    android:id="@+id/tagStatisticsWeekRecyclerView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
+                    android:elevation="3dp"
+                    app:layout_constraintBottom_toTopOf="@id/thisMonthTitle"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/statisticsWeekCardView" />
+
+                <TextView
+                    android:id="@+id/thisMonthTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="14dp"
+                    android:text="@string/statisticMonthTitle"
+                    android:textSize="19sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tagStatisticsWeekRecyclerView" />
+
+                <TextView
+                    android:id="@+id/thisMonthDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:textSize="15sp"
+                    app:layout_constraintBottom_toBottomOf="@id/thisMonthTitle"
+                    app:layout_constraintStart_toEndOf="@id/thisMonthTitle"
+                    tools:text="2022.02.14 - 2022.02.21" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/statisticsMonthCardView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="15dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="3dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/thisMonthTitle"
+                    app:layout_constraintVertical_bias="0.0">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="25dp"
+                        android:paddingBottom="25dp">
+
+                        <ImageView
+                            android:id="@+id/medalMonthImageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="4dp"
+                            android:background="@drawable/ic_military"
+                            app:layout_constraintBottom_toBottomOf="@id/statisticsMonthResult"
+                            app:layout_constraintEnd_toStartOf="@id/statisticsMonthResult"
+                            app:layout_constraintHorizontal_bias="1.0"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                        <TextView
+                            android:id="@+id/statisticsMonthResult"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="100%"
+                            android:textSize="25sp"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/statisticsMonthSubTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/statisticsSubTitle"
+                            android:textSize="18dp"
+                            app:layout_constraintBottom_toBottomOf="@id/statisticsMonthResult"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toEndOf="@id/statisticsMonthResult"
+                            app:layout_constraintTop_toTopOf="@id/statisticsMonthResult" />
+
+                        <TextView
+                            android:id="@+id/statisticsMonthMyDescription"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="@string/myDescription100"
+                            android:textSize="17sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/statisticsMonthResult" />
+
+                        <include
+                            android:id="@+id/totalMonthInfo"
+                            layout="@layout/statistic_text_view"
+                            android:layout_width="0dp"
+                            android:layout_height="25dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            app:layout_constraintEnd_toStartOf="@id/successMonthInfo"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/statisticsMonthMyDescription" />
+
+                        <include
+                            android:id="@+id/successMonthInfo"
+                            layout="@layout/statistic_text_view"
+                            android:layout_width="0dp"
+                            android:layout_height="25dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="20dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/totalMonthInfo"
+                            app:layout_constraintTop_toTopOf="@id/totalMonthInfo" />
+
+                        <include
+                            android:id="@+id/cancelMonthInfo"
+                            layout="@layout/statistic_text_view"
+                            android:layout_width="0dp"
+                            android:layout_height="25dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            app:layout_constraintEnd_toStartOf="@id/failMonthInfo"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/totalMonthInfo" />
+
+                        <include
+                            android:id="@+id/failMonthInfo"
+                            layout="@layout/statistic_text_view"
+                            android:layout_width="0dp"
+                            android:layout_height="25dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="20dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/cancelMonthInfo"
+                            app:layout_constraintTop_toTopOf="@id/cancelMonthInfo" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/tagStatisticsMonthRecyclerView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -189,7 +342,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/statisticsCardView" />
+                    app:layout_constraintTop_toBottomOf="@id/statisticsMonthCardView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
